# IPSANavigation

./: README.md
Controller/: main.py
src/rover_ipsa/: CMakeLists.txt  package.xml
src/rover_ipsa/launch/: rover_ipsa_world.launch
src/rover_ipsa/urdf/: ardrone.xacro  robot.xacro
