<?xml version="1.0"?>
<package>
  <name>rover_ipsa</name>
  <version>0.0.1</version>
  <description>A simple robot</description>

  <maintainer email="jamy.chahal@ipsa.fr">Jamy Chahal</maintainer>

  
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
